# tosics_util

./: .gitignore  .sourcecode_trash  CMakeLists.txt  Changelog.txt  README.md  build.sh  error.hpp  extra_type_traits.hpp  gnq  inc2gch  inc2pch  info.hpp  member.hpp  nested.hpp  preprocess  preserve.hpp  rebuild-stdinc  signalslot.hpp  snq  statereport.hpp  stdinc.hpp  tosics_util.hpp  util.cpp  util.hpp  util.kdev4  util_demos.cpp  utils.cpp  utils.hpp
.kdev4/: util.kdev4
docs/: colorcodes.txt  notes-2019-1230.txt
test/: finally5.cpp
test/signalslot/: fxfanoutsig.cpp  new_sig2nest.cpp  sig2nest.cpp  signaller.cpp  slotsign.cpp
